app/k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: pyapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pyapp
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pyapp
    spec:
      serviceAccountName: pyapp-service-account
      containers:
      - image: briandavis/pyapp:latest
        name: pyapp
        ports:
          - containerPort: 8000
            name: http
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
